--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "body-parser": "^1.20.0",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
@@ -23,6 +25,7 @@
     "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
+    "nodemailer": "^6.9.7",
     "stripe": "^10.6.0",
     "uuid": "^8.3.2"
   },
